--- a/cinevelvet-frontend/src/css/Peliculas.css
+++ b/cinevelvet-frontend/src/css/Peliculas.css
@@ -1,3 +1,4 @@
+/* Peliculas.css */
 .peliculas-admin-container {
   padding: 20px;
   padding-top: calc(20px + env(safe-area-inset-top));
@@ -185,7 +186,6 @@ hr {
     opacity: 0;
     transform: translateY(-5px);
   }
-
   to {
     opacity: 1;
     transform: translateY(0);
