--- a/cinevelvet-frontend/src/css/Sala.css
+++ b/cinevelvet-frontend/src/css/Sala.css
@@ -1,4 +1,4 @@
-/* Layout de la cuadrícula */
+/* Sala.css */
 .sala-grid {
     display: grid;
     grid-template-columns: repeat(5, 30px) 40px repeat(5, 30px);
@@ -7,7 +7,6 @@
     max-width: fit-content;
 }
 
-/* Estilos para cada butaca */
 .butaca {
     display: flex;
     justify-content: center;
@@ -87,7 +86,6 @@
     text-transform: uppercase;
 }
 
-/* Cambia el color de la butaca seleccionada */
 .butaca-seleccionada .butaca-img {
     filter: brightness(0.7) sepia(1) hue-rotate(100deg) saturate(2);
 }
@@ -96,37 +94,31 @@
     font-size: 12px;
 }
 
-/* Cambia el color de la butaca ocupada */
 .butaca-ocupada .butaca-img {
     filter: brightness(0.9) sepia(1) hue-rotate(-48deg) saturate(5);
 }
 
-/* Contenedor de la butaca */
 .butaca-contenedor {
     width: 30px;
     height: 30px;
 }
 
-/* Imagen de la butaca */
 .butaca-img {
     width: 100%;
     height: 100%;
     transition: filter 0.2s;
 }
 
-/* Icono de selección (Check) */
 .icono-check {
     position: absolute;
     top: 50%;
     left: 50%;
     width: 20px;
-    /* Ajustado a tamaño más pequeño */
     height: 20px;
     transform: translate(-50%, -50%);
     pointer-events: none;
 }
 
-/* Estilos del pasillo central */
 .pasillo {
     width: 100%;
     height: 100%;
@@ -156,7 +148,6 @@
     }
 }
 
-/* Estilos de los botones */
 .boton-comprar-container {
     display: flex;
     justify-content: flex-end;
@@ -185,7 +176,6 @@
     transition: background-color 0.3s ease;
 }
 
-/* Popup */
 .popup-overlay {
     position: fixed;
     top: 0;
@@ -358,7 +348,6 @@
     0% {
         transform: rotate(0deg);
     }
-
     100% {
         transform: rotate(360deg);
     }
@@ -391,5 +380,4 @@
   font-weight: bold;
   font-size: 12px;
   color: #666;
-
 }
